# build123d-mcp

./: .coverage  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROMPT.md  README.md  SPEC.md  default_prompt.md  llms.md  pyproject.toml  research.md  server.json
.claude/skills/b123d-drawing/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
docs/: arko-t-design-state-analysis.md  design-conformance-proposal.md  live-viewer.md  micropython-wasm-feasibility.md  tool-surface-consolidation-proposal.md
docs/adr/: 0001-worker-ipc-concurrency.md  0002-worker-subprocess-crash-containment.md
examples/: live_viewer_client.py  live_viewer_pyvista.py
scripts/: sync_server_json.py
src/build123d_mcp/: _design_audit_subprocess.py  _gate_subprocess.py  _locate_subprocess.py  _recover_subprocess.py  _shape_compare_subprocess.py  _shape_op_subprocess.py  _tessellate_subprocess.py  _vtk_render_subprocess_worker.py  bd_warehouse_resource.py  cli.py  drafting_cookbook.py  presentation_cookbook.py  quickref.py  security.py  selectors_cookbook.py  server.py  session.py  viewer.py  worker.py
src/build123d_mcp/skills/b123d-drawing/: SKILL.md
src/build123d_mcp/skills/b123d-edit/: SKILL.md
src/build123d_mcp/skills/b123d-modeling/: SKILL.md
src/build123d_mcp/skills/b123d-repair/: SKILL.md
src/build123d_mcp/tools/: _bounded.py  _budget.py  _marshal.py  _paths.py  align_check.py  analyze_printability.py  cross_sections.py  design_audit.py  diff.py  drafting_api.py  execute.py  export.py  find_features.py  health_check.py  import_step.py  inspect_drawing.py  inspect_part.py  install_skill.py  interference.py  library.py  lint_drawing.py  list_objects.py  locate.py  measure.py  recover.py  render.py  render_drawing.py  repair_advice.py  repair_hints.py  resolve.py  save_drawing_annotations.py  script.py  session_state.py  shape_compare.py  suggest_view_layout.py  validate.py  validate_code.py  verify_spec.py  version.py  view_axes.py
src/build123d_mcp/tools/recognizers/: __init__.py  countersink.py
tests/: test_align_check.py  test_allow_all_imports_sandbox.py  test_bd_warehouse_resource.py  test_bounded_geometry_ops.py  test_design_audit.py  test_design_audit_subprocess.py  test_drafting_api.py  test_drafting_cookbook.py  test_drawing_tooling.py  test_export_step.py  test_failure_class.py  test_find_countersinks.py  test_find_features.py  test_http_session.py  test_in_process_session.py  test_inspect_drawing.py  test_inspect_part.py  test_install_skill.py  test_library.py  test_locate.py  test_marshal.py  test_namespace_primitives.py  test_no_sandbox.py  test_outcomes.py  test_packaging.py  test_path_safety.py  test_presentation_cookbook.py  test_quickref.py  test_recover.py  test_render_tessellation_bounded.py  test_repair_advice.py  test_resolve.py  test_resource_limits.py  test_save_json.py  test_script.py  test_selectors_cookbook.py  test_server_json_version.py  test_session_resource.py  test_suggest_view_layout.py  test_sync_server_json.py  (+14 more)
