[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build123d-mcp"
version = "0.3.40.dev0"
description = "MCP server wrapping build123d for interactive 3D CAD"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Paul Fremantle", email = "pzfreo@gmail.com" }]
keywords = ["mcp", "build123d", "cad", "3d", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp",
    # build123d is pre-1.0 and 0.x minor bumps may break the API.
    # Soft pin to the tested-against major+minor; bump deliberately.
    "build123d>=0.10,<0.11",
    "bd_warehouse",
    # SVG → PNG rasterisation for 2D drawing review (render_view path).
    # resvg-py ships pre-built Rust wheels for all platforms with no native
    # library dependencies — works out-of-the-box on Linux/macOS/Windows.
    "resvg-py",
    # Drawing-annotation helpers (dim_linear, leader, view_axes, lint_drawing).
    # Bundled at runtime so `inspect_drawing`'s docstring promise — and the
    # build123d://drafting cookbook — actually work out of the box.
    # Import name remains `build123d_drafting` (install name ≠ import name).
    "build123d-drafting-helpers>=0.4.1",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/pzfreo/build123d-mcp"
Repository = "https://github.com/pzfreo/build123d-mcp"
Issues = "https://github.com/pzfreo/build123d-mcp/issues"

[project.scripts]
build123d-mcp = "build123d_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/build123d_mcp"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-timeout",
    "mypy",
    "pytest-cov>=7.1.0",
    "ruff",
]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true

[tool.ruff]
# line-length 100 matches the existing code; E501 is not enabled, so this only
# governs where the formatter reflows code (not comments or strings).
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Phase 1 (issue #185): objective, auto-fixable rules only. Safety/complexity
# rules (BLE blind-except, S bandit, C901) are intentionally deferred — the
# sandbox/worker design uses deliberate broad-excepts and eval/exec/subprocess
# that would each need per-site noqa judgement, out of scope for an automated
# baseline.
select = ["F", "I", "UP", "C4"]
